<resources>
    <string name="app_name">Vakcino</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Login</string>

    <string name="label_login">Login</string>

    <string name="double_back_exit">Press back again to exit</string>

    <string name="title_activity_register">Registration</string>


    <string name="type_user1">Person</string>
    <string name="type_user2">Pet</string>


    <string name="wrong_email">Enter a valid email address</string>
    <string name="password_info">Password must be 6 characters including uppercase and lowercase letters and numbers</string>
    <string name="waiting">Please, wait...</string>

    <!-- Strings related to login -->
    <string name="hint_email">E-Mail</string>
    <string name="hint_password">Password</string>
    <string name="label_registration_question">No account yet? Create one</string>
    <string name="dialog_title_attention">Warning</string>
    <string name="dialog_response_ok">OK</string>
    <string name="login_successfully">Login successfully</string>
    <string name="logout_successfully">Logout successfully</string>
    <string name="error_empty_form">Please, fill out all fields</string>
    <string name="login_autentication_error">Authentication error</string>
    <string name="login_autentication">Authenticating...</string>
    <string name="login_wrong_pw">Wrong password</string>
    <!-- String related to registration -->
    <string name="confirm_email">Confirm e-mail</string>
    <string name="confirm_password">Confirm password</string>
    <string name="label_registration">Create Account</string>
    <string name="label_name">Name</string>
    <string name="registration_creating_account">Creating Account...</string>
    <string name="label_login_question">Already a member? Login!</string>
    <string name="registration_failed">Registration failed!</string>
    <string name="length_min_name">At least 3 characters</string>
    <string name="length_min_pw">At least 8 characters</string>
    <string name="error_pw_no_match">Password do not match</string>
    <string name="error_email_no_match">E-Mail do not match</string>
    <!-- Strings related to tabs -->
    <string name="title_fragment_people">People</string>
    <string name="title_fragment_pets">Pets</string>
    <string name="empty_container">To add a new user, open the navigation drawer on the left.</string>
    <!-- String drawer -->
    <string name="drawer_options">Options</string>
    <string name="add_user">Add user</string>
    <string name="log_out">Log out</string>
    <string name="choice_person_pet">Choose a typology of user</string>
    <!-- New User -->
    <string name="hint_name">Name</string>
    <string name="hint_surname">Surname</string>
    <string name="hint_birth_date">Date of birth</string>
    <string name="label_cancel">Cancel</string>
    <string name="label_add_new_user">Create</string>
    <string name="operation_cancelled">The operation was cancelled</string>
    <string name="operation_successful">Done!</string>
    <string name="notice_settings">Notice settings</string>
    <string name="empty_input">Enter a value</string>
    <string name="menu_view">View</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_delete">Delete</string>

    <string name="apply_vaccination">APPLY</string>
    <string name="date_vaccination_question">When was vaccination done?</string>
    <string name="bookletToDo">Vaccinations to do</string>
    <string name="bookletDone">Vaccinations made</string>
    <string name="remove_button">Remove</string>
    <string name="welcome">Welcome!</string>
    <string name="start_page_text">To continue add or select an user!</string>
    <string name="click_here_welcome">Click here to start</string>
    <string name="choose">Choose</string>
    <string name="export_calendar_question">Which user you want to export the vaccines?</string>
    <string name="export">Export into calendar</string>
    <string name="congrats">Congratulations!</string>
    <string name="congrats_text">you\'ve finished all vaccinations</string>
    <string name="noVac">:(</string>
    <string name="noVac_text">No vaccinations yet!</string>
    <string name="drawer_open">Menu open</string>
    <string name="drawer_close">Menu close</string>
    <string name="menu_view_vac">View vaccinations</string>
    <string name="warning">WARNING!</string>
    <string name="delete_question">Are you sure to delete this user?</string>
    <string name="label_positive">Yes</string>
    <string name="undo_request">Are you sure to undo user creation?</string>
    <string name="undo_description">If you continue to lose the data you just entered, do you still want to continue?</string>
    <string name="label_other_users">Other users</string>
    <string name="immunization_type">Immunization type</string>
    <string name="export_successfully">Vaccinations are exported succesfully</string>
</resources>
