<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/linearLayoutH"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="horizontal"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="50dp">

        <ImageView
            android:layout_width="61dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:padding="10dp"
            android:src="@drawable/arrow_welcome" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/linearLayout"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:gravity="left"
                android:padding="10dp"
                android:text=""
                android:textSize="20sp" />

            <TextView
                android:layout_width="267dp"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/linearLayout"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:gravity="left"
                android:padding="10dp"
                android:text="@string/click_here_welcome"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:id="@+id/linearLayout">

        <TextView
            android:layout_width="325dp"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/linearLayout"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/welcome"
            android:textSize="40sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:gravity="center"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:text="@string/start_page_text" />

    </LinearLayout>
</RelativeLayout>

